--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityFeel"></activity>
+        <activity android:name=".ActivityEx"></activity>
+        <activity android:name=".ActivityFeel" />
         <activity android:name=".HomeAct" />
         <activity android:name=".Activity5" />
         <activity android:name=".Activity4" />
