--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ActivityEx"></activity>
         <activity android:name=".ActivitySnack"/>
+        <activity android:name=".ActivitySugar"/>
         <activity android:name=".ActivityFeel" />
         <activity android:name=".HomeAct" />
         <activity android:name=".Activity5" />
